fixed footer overlap

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@ html{
 	font-family: 'Montserrat', sans-serif;
 	box-sizing: border-box;	
 	font-family: sans-serif;
-    line-height: 1.15;
+	line-height: 1.15;
+	height: 100%;
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   }
@@ -17,7 +18,8 @@ body{
     line-height: 1.5;
     color: #212529;
     text-align: left;
-    background-color: #fff;
+	background-color: #fff;
+	height: 100%;
 }
 
 *, *::before, *::after {
@@ -39,7 +41,9 @@ body{
 .header {
 	font-family: 'Montserrat', sans-serif;
 	background: none !important;
+	min-height: 100%;
 	display: block;
+	margin-bottom: -3rem;
 }
 
 .header h1 {
@@ -133,17 +137,12 @@ body{
 }
 
 .foot{
-	margin-top: 2rem;
 	position: absolute;
 	left: 0;
 	right: 0;
-	bottom: 0;
-	height: 2rem;
 	width: 100%;
 	height:3rem;
 	padding-top: .5rem;
-	padding-bottom: 1.5rem;
-	overflow: scroll;
 	background-color: transparent;
 	color: black;
 	text-align: center;
